--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ __pycache__/
 *.so
 *.o
 
+# Build
+.mesonpy-*
+
 # Distribution
 bin/
 build/
@@ -40,3 +43,6 @@ coverage.xml
 
 # Sphinx documentation
 docs/build/
+
+# Lint
+.ruff_cache/
