--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -46,6 +46,10 @@ recursive-include tests *.txt
 recursive-exclude tests *.svg
 recursive-exclude tests *.pdf
 
+recursive-include tools *.sh
+recursive-include tools *.yml
+
+include *.star
 include CHANGELOG.rst
 include README.rst
 include AUTHORS.txt
