--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,9 +1,9 @@
 name: build-linux
 
 on:
-    # push:
-    #     branches:
-    #         - main
+    push:
+        branches:
+            - main
     release:
         types: 
             - published
@@ -42,11 +42,11 @@ jobs:
                   cuda: '12.1.0'
 
             - name: Install package and dependencies (CPython)
-              if: (!contains(matrix.python-version, 'pypy')) && (matrix.python-version != '3.10') && (matrix.python-version != '3.11') && (matrix.python-version != '3.12')
+              if: (matrix.python-version == '3.9')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
-                  python -m pip install --upgrade .[extra]
+                  python -m pip install --upgrade .[extra] -vvv
               env:
                   USE_LONG_INT: 0
                   USE_UNSIGNED_LONG_INT: 0
@@ -56,11 +56,11 @@ jobs:
 
             # For python 3.10 and 3.11, do not install extras (sparsesuite)
             - name: Install package and dependencies (CPython)
-              if: (matrix.python-version == '3.10') || (matrix.python-version == '3.11') || (matrix.python-version == '3.12')
+              if: !contains(matrix.python-version, 'pypy') && (matrix.python-version != '3.9')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
-                  python -m pip install --upgrade .
+                  python -m pip install --upgrade . -vvv
               env:
                   USE_LONG_INT: 0
                   USE_UNSIGNED_LONG_INT: 0
@@ -76,7 +76,7 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
-                  python -m pip install --upgrade .[extra]
+                  python -m pip install --upgrade .[extra] -vvv
               env:
                   USE_CUDA: 1
                   CUDA_DYNAMIC_LOADING: 1
