--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -1,9 +1,9 @@
 name: build-macos
 
 on:
-    # push:
-    #     branches:
-    #         - main
+    push:
+        branches:
+            - main
     release:
         types: 
             - published
@@ -57,11 +57,11 @@ jobs:
             #       cuda: '12.1.0'
 
             - name: Install package and dependencies
-              if: (matrix.python-version != '3.10') && (matrix.python-version != '3.11') && (matrix.python-version != '3.12')
+              if: (matrix.python-version == '3.9')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
-                  python -m pip install --upgrade .[extra]
+                  python -m pip install --upgrade .[extra] -vvv
               env:
                   USE_LONG_INT: 0
                   USE_UNSIGNED_LONG_INT: 0
@@ -70,11 +70,11 @@ jobs:
 
             # For python 3.10, 3.11 do not install extras (sparsesuite)
             - name: Install package and dependencies
-              if: (matrix.python-version == '3.10') || (matrix.python-version == '3.11') || (matrix.python-version == '3.12')
+              if: (matrix.python-version != '3.9')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
-                  python -m pip install --upgrade .
+                  python -m pip install --upgrade . -vvv
               env:
                   USE_LONG_INT: 0
                   USE_UNSIGNED_LONG_INT: 0
