--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -5,7 +5,7 @@ on:
         branches:
             - main
     release:
-        types: 
+        types:
             - published
 
 jobs:
@@ -72,44 +72,31 @@ jobs:
             # does not need manylinux docker, thuns, CUDA can be installed in
             # the github action's virtual machine using the Jimver's action
             # in the previous action (see above).
-            - name: Build wheels in windows with CUDA support (X86_64)
+            - name: Build wheels in windows with CUDA support (X86_64, ARM64)
               if: matrix.os == 'windows-latest'
               uses: pypa/cibuildwheel@v2.15.0
               env:
-                  CIBW_ARCHS_WINDOWS: "AMD64 x86"
-                  CIBW_BUILD: "*-win_amd64"
+                  CIBW_ARCHS_WINDOWS: "AMD64 x86 ARM64"
+                  CIBW_BUILD: "*-win_amd64 *-win_arm64"
                   CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
-                  CIBW_BUILD_VERBOSITY: 1
+                  CIBW_BUILD_VERBOSITY: 3
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=1 CUDA_DYNAMIC_LOADING=0"
-              with:
-                output-dir: wheelhouse
-
-            # Build wheel for windows with CUDA enabled. Note that cibuildwheel
-            # does not need manylinux docker, thuns, CUDA can be installed in
-            # the github action's virtual machine using the Jimver's action
-            # in the previous action (see above).
-            - name: Build wheels in windows without CUDA support (ARM64)
-              if: matrix.os == 'windows-latest'
-              uses: pypa/cibuildwheel@v2.15.0
-              env:
-                  CIBW_ARCHS_WINDOWS: "ARM64"
-                  CIBW_BUILD: "*-win_arm64"
-                  CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
-                  CIBW_BUILD_VERBOSITY: 1
-                  CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0 CUDA_DYNAMIC_LOADING=0"
+                  CIBW_BEFORE_BUILD_WINDOWS: "pip install delvewheel"
+                  CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel repair -w {dest_dir} {wheel}"
               with:
                 output-dir: wheelhouse
            
-            # Do not enable compiling with CUDA for macos since NIVDIA no
-            # longer supports CUDA in the macos.
-            - name: Build wheels in mac without CUDA support (X86_64 and arm64)
+            # Do not enable compiling with CUDA for macos since NIVDIA no longer supports CUDA in the macos.
+            # Build wheel for macos X86_64.
+            # Note that wheels for macos ARM64 will be built on cirrus ci (see /tools/ci)
+            - name: Build wheels in mac without CUDA support (X86_64)
               if: matrix.os == 'macos-latest'
               uses: pypa/cibuildwheel@v2.15.0
               env:
-                  CIBW_ARCHS_MACOS: "x86_64 arm64"
-                  CIBW_BUILD: "*-macosx_arm64 *-macosx_x86_64"
+                  CIBW_ARCHS_MACOS: "x86_64"
+                  CIBW_BUILD: "*-macosx_x86_64"
                   CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
-                  CIBW_BUILD_VERBOSITY: 1
+                  CIBW_BUILD_VERBOSITY: 3
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0"
               with:
                 output-dir: wheelhouse
@@ -127,6 +114,7 @@ jobs:
             # anaconda cloud upload size is 1GB, the large wheel size will not
             # be a problem. The advantage of bundling cuda libraries to the
             # wheel is that the end-user does not have to install cuda toolkit.
+            # Note that wheels for linux AARCH64 will be built on cirrus ci (see /tools/ci)
             - name: Build wheels in linux with CUDA support (X86_64)
               if: matrix.os == 'ubuntu-latest'
               uses: pypa/cibuildwheel@v2.15.0
@@ -137,27 +125,12 @@ jobs:
                   CIBW_ARCHS_LINUX: "x86_64"
                   CIBW_BUILD: "*-manylinux_x86_64"
                   CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
-                  CIBW_BUILD_VERBOSITY: 1
+                  CIBW_BUILD_VERBOSITY: 3
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=1 CUDA_DYNAMIC_LOADING=0 CUDA_HOME=/usr/local/cuda"
               with:
                 output-dir: wheelhouse
-
-            # This does not work, the compilation takes several hours, then fails, even without enabling cuda.
-            # - name: Build wheels in linux without CUDA support (AARCH64)
-            #   if: matrix.os == 'ubuntu-latest'
-            #   uses: pypa/cibuildwheel@v2.15.0
-            #   env:
-            #       # CIBW_MANYLINUX_X86_64_IMAGE: sameli/manylinux2014_x86_64_cuda_12.2
-            #       CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
-            #       # CIBW_BEFORE_ALL_LINUX: chmod +x .github/scripts/install_cuda.sh && .github/scripts/install_cuda.sh
-            #       CIBW_ARCHS_LINUX: "aarch64"
-            #       CIBW_BUILD: "*-manylinux_aarch64"
-            #       CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
-            #       CIBW_BUILD_VERBOSITY: 1
-            #       CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0 CUDA_DYNAMIC_LOADING=0 CUDA_HOME=/usr/local/cuda"
-            #   with:
-            #     output-dir: wheelhouse
             
+            # Upload all wheels to an artifact
             - name: Upload artifacts
               uses: actions/upload-artifact@v3
               with:
