--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -56,7 +56,7 @@ jobs:
 
             # For python 3.10 and 3.11, do not install extras (sparsesuite)
             - name: Install package and dependencies (CPython)
-              if: !contains(matrix.python-version, 'pypy') && (matrix.python-version != '3.9')
+              if: (!contains(matrix.python-version, 'pypy')) && (matrix.python-version != '3.9')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
