--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -1,9 +1,9 @@
 name: deploy-pypi
 
 on:
-    # push:
-    #     branches:
-    #         - main
+    push:
+        branches:
+            - main
     release:
         types:
             - published
@@ -16,7 +16,10 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ubuntu-latest, windows-latest, macos-latest]
-                
+                arch: ['x86_64']
+                include:
+                    - os: windows-latest
+                      arch: 'arm64' 
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -69,7 +72,7 @@ jobs:
             # linux, see the second next actions below "Build wheel with cuda
             # support".
             - name: Install CUDA
-              if: matrix.os == 'windows-latest'
+              if: (matrix.os == 'windows-latest') && (matrix.arch == 'x86_64')
               uses: Jimver/cuda-toolkit@v0.2.11
               id: cuda-toolkit
               with:
@@ -79,12 +82,12 @@ jobs:
             # does not need manylinux docker, thuns, CUDA can be installed in
             # the github action's virtual machine using the Jimver's action
             # in the previous action (see above).
-            - name: Build wheels in windows with CUDA support (X86_64, ARM64)
-              if: matrix.os == 'windows-latest'
+            - name: Build wheels in windows with CUDA support (X86_64)
+              if: (matrix.os == 'windows-latest') && (matrix.arch == 'x86_64')
               uses: pypa/cibuildwheel@v2.15.0
               env:
-                  CIBW_ARCHS_WINDOWS: "AMD64 x86 ARM64"
-                  CIBW_BUILD: "*-win_amd64 *-win_arm64"
+                  CIBW_ARCHS_WINDOWS: "AMD64 x86"
+                  CIBW_BUILD: "*-win_amd64"
                   CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
                   CIBW_BUILD_VERBOSITY: 3
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=1 CUDA_DYNAMIC_LOADING=1"
@@ -92,8 +95,27 @@ jobs:
                   CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel repair -w {dest_dir} {wheel}"
               with:
                 output-dir: wheelhouse
+
+            # Build wheel for windows with CUDA enabled. Note that cibuildwheel
+            # does not need manylinux docker, thuns, CUDA can be installed in
+            # the github action's virtual machine using the Jimver's action
+            # in the previous action (see above).
+            - name: Build wheels in windows without CUDA support (ARM64)
+              if: (matrix.os == 'windows-latest') && (matrix.arch == 'arm64')
+              uses: pypa/cibuildwheel@v2.15.0
+              env:
+                  CIBW_ARCHS_WINDOWS: "ARM64"
+                  CIBW_BUILD: "*-win_arm64"
+                  CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
+                  CIBW_BUILD_VERBOSITY: 3
+                  CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0 CUDA_DYNAMIC_LOADING=1"
+                  CIBW_BEFORE_BUILD_WINDOWS: "pip install delvewheel"
+                  CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel repair -w {dest_dir} {wheel}"
+              with:
+                output-dir: wheelhouse
            
             # Do not enable compiling with CUDA for macos since NIVDIA no longer supports CUDA in the macos.
+            # Build wheel for macos X86_64.
             # Note that wheels for macos ARM64 will be built on cirrus ci (see /tools/ci)
             - name: Build wheels in mac without CUDA support (X86_64)
               if: matrix.os == 'macos-latest'
