--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -90,9 +90,9 @@ jobs:
                   CIBW_BUILD: "*-win_amd64"
                   CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
                   CIBW_BUILD_VERBOSITY: 3
-                  CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=1 CUDA_DYNAMIC_LOADING=1"
                   CIBW_BEFORE_BUILD_WINDOWS: "pip install delvewheel"
                   CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel repair -w {dest_dir} {wheel}"
+                  CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=1 CUDA_DYNAMIC_LOADING=1"
               with:
                 output-dir: wheelhouse
 
@@ -100,19 +100,19 @@ jobs:
             # does not need manylinux docker, thuns, CUDA can be installed in
             # the github action's virtual machine using the Jimver's action
             # in the previous action (see above).
-            - name: Build wheels in windows without CUDA support (ARM64)
-              if: (matrix.os == 'windows-latest') && (matrix.arch == 'arm64')
-              uses: pypa/cibuildwheel@v2.15.0
-              env:
-                  CIBW_ARCHS_WINDOWS: "ARM64"
-                  CIBW_BUILD: "*-win_arm64"
-                  CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
-                  CIBW_BUILD_VERBOSITY: 3
-                  CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0 CUDA_DYNAMIC_LOADING=1"
-                  CIBW_BEFORE_BUILD_WINDOWS: "pip install delvewheel"
-                  CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel repair -w {dest_dir} {wheel}"
-              with:
-                output-dir: wheelhouse
+            # - name: Build wheels in windows without CUDA support (ARM64)
+            #   if: (matrix.os == 'windows-latest') && (matrix.arch == 'arm64')
+            #   uses: pypa/cibuildwheel@v2.15.0
+            #   env:
+            #       CIBW_ARCHS_WINDOWS: "ARM64"
+            #       CIBW_BUILD: "*-win_arm64"
+            #       CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
+            #       CIBW_BUILD_VERBOSITY: 3
+            #       CIBW_BEFORE_BUILD_WINDOWS: "pip install delvewheel"
+            #       CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel repair -w {dest_dir} {wheel}"
+            #       CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0 CUDA_DYNAMIC_LOADING=1"
+            #   with:
+            #     output-dir: wheelhouse
            
             # Do not enable compiling with CUDA for macos since NIVDIA no longer supports CUDA in the macos.
             # Build wheel for macos X86_64.
