--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -15,7 +15,8 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                os: [ubuntu-latest, windows-latest, macos-latest]
+                # os: [ubuntu-latest, windows-latest, macos-latest] # TEST
+                os: [ubuntu-latest]  # TEST
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -130,7 +131,8 @@ jobs:
                   # CIBW_BEFORE_ALL_LINUX: chmod +x .github/scripts/install_cuda.sh && .github/scripts/install_cuda.sh
                   CIBW_ARCHS_LINUX: "x86_64"
                   CIBW_BUILD: "*-manylinux_x86_64"
-                  CIBW_SKIP: "pp37-* cp36-* cp37-* cp38-*"
+                  # CIBW_SKIP: "pp37-* cp36-* cp37-* cp38-*"  # TEST
+                  CIBW_SKIP: "pp37-* cp*"  # TEST
                   CIBW_BUILD_VERBOSITY: 3
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=1 CUDA_DYNAMIC_LOADING=1 CUDA_HOME=/usr/local/cuda"
                   # CIBW_BEFORE_BUILD_LINUX: yum update; yum install gcc-gfortran openblas-devel.x86_64 lapack-devel.x86_64 -y;
