--- a/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
+++ b/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
@@ -65,10 +65,10 @@ pypi_build_wheels_macosx_arm64_task:
     CIBW_TEST_SKIP: "*_universal2:arm64"
 
   build_script:
-    - brew install python@3.10
-    - ln -s python3 /opt/homebrew/opt/python@3.10/bin/python
-    - which python
     - uname -m
+    - brew install python@3.11
+    - sudo ln -s /opt/homebrew/opt/python@3.11/bin/python3.11 /usr/local/bin/python
+    - which python
     - python -c "import platform;print(platform.python_version());print(platform.system());print(platform.machine())"
     - clang --version
   <<: *PYPI_MACOSX_ARM64_CIBW
