--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -78,7 +78,6 @@ jobs:
 
             # For python 3.10, 3.11 do not install extras (sparsesuite)
             - name: Install package and dependencies
-              if: (matrix.python-version != '3.9')
               if: (!contains(matrix.python-version, 'pypy')) && (matrix.python-version != '3.9')
               run: |
                   python -m pip install --upgrade pip
@@ -90,7 +89,8 @@ jobs:
                   USE_CBLAS: 0
                   USE_CUDA: 0
 
-            # For python 3.10, 3.11 do not install extras (sparsesuite)
+            # For PyPy, export OpenBLAS pkgconfig file, we it tries to build scipy from source
+            # which needs OpenBLAS
             - name: Install package and dependencies
               if: (contains(matrix.python-version, 'pypy'))
               run: |
