--- a/tools/ci/cirrus_deploy_pypi_linux_aarch64.yml
+++ b/tools/ci/cirrus_deploy_pypi_linux_aarch64.yml
@@ -43,6 +43,12 @@ pypi_build_wheels_linux_aarch64_task:
         CIBW_BUILD: "cp311-manylinux_aarch64"
     - env:
         CIBW_BUILD: "cp312-manylinux_aarch64"
+    - env:
+        CIBW_BUILD: "cp38-manylinux_aarch64"
+    - env:
+        CIBW_BUILD: "cp39-manylinux_aarch64"
+    - env:
+        CIBW_BUILD: "cp310-manylinux_aarch64"
   env:
     CIBW_ARCHS: "aarch64"
     # CIBW_BUILD: "*-manylinux_aarch64"
