--- a/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
+++ b/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
@@ -39,6 +39,12 @@ pypi_build_wheels_macosx_arm64_task:
         CIBW_BUILD: "cp311-macosx_arm64"
     - env:
         CIBW_BUILD: "cp312-macosx_arm64"
+    - env:
+        CIBW_BUILD: "cp38-manylinux_aarch64"
+    - env:
+        CIBW_BUILD: "cp39-manylinux_aarch64"
+    - env:
+        CIBW_BUILD: "cp310-manylinux_aarch64"
   env:
     PATH: /opt/homebrew/opt/python@3.10/bin:/usr/local/lib:/usr/local/include:$PATH
     # Specifying CIBW_ENVIRONMENT_MACOS overrides pyproject.toml, so include
@@ -61,7 +67,8 @@ pypi_build_wheels_macosx_arm64_task:
     # CIBW_BUILD: "*-macosx_arm64"
     CIBW_SKIP: "pp37-* cp36-* cp37-* cp38-*"
     CIBW_BUILD_VERBOSITY: "3"
-    CIBW_BEFORE_BUILD: "pip install delocate; brew install libomp"
+    # CIBW_BEFORE_BUILD: "pip install delocate; brew install libomp"
+    CIBW_BEFORE_BUILD: "pip install delocate; brew install libomp; brew install openblas"
     CIBW_TEST_SKIP: "*_universal2:arm64"
 
   build_script:
