--- a/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
+++ b/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
@@ -40,11 +40,11 @@ pypi_build_wheels_macosx_arm64_task:
     - env:
         CIBW_BUILD: "cp312-macosx_arm64"
     - env:
-        CIBW_BUILD: "cp38-manylinux_aarch64"
+        CIBW_BUILD: "pp38-manylinux_aarch64"
     - env:
-        CIBW_BUILD: "cp39-manylinux_aarch64"
+        CIBW_BUILD: "pp39-manylinux_aarch64"
     - env:
-        CIBW_BUILD: "cp310-manylinux_aarch64"
+        CIBW_BUILD: "pp310-manylinux_aarch64"
   env:
     PATH: /opt/homebrew/opt/python@3.10/bin:/usr/local/lib:/usr/local/include:$PATH
     # Specifying CIBW_ENVIRONMENT_MACOS overrides pyproject.toml, so include
