--- a/tools/ci/cirrus_deploy_pypi_linux_aarch64.yml
+++ b/tools/ci/cirrus_deploy_pypi_linux_aarch64.yml
@@ -44,11 +44,11 @@ pypi_build_wheels_linux_aarch64_task:
     - env:
         CIBW_BUILD: "cp312-manylinux_aarch64"
     - env:
-        CIBW_BUILD: "cp38-manylinux_aarch64"
+        CIBW_BUILD: "pp38-manylinux_aarch64"
     - env:
-        CIBW_BUILD: "cp39-manylinux_aarch64"
+        CIBW_BUILD: "pp39-manylinux_aarch64"
     - env:
-        CIBW_BUILD: "cp310-manylinux_aarch64"
+        CIBW_BUILD: "pp310-manylinux_aarch64"
   env:
     CIBW_ARCHS: "aarch64"
     # CIBW_BUILD: "*-manylinux_aarch64"
