--- a/tools/ci/cirrus_deploy_pypi_linux_aarch64.yml
+++ b/tools/ci/cirrus_deploy_pypi_linux_aarch64.yml
@@ -62,7 +62,7 @@ pypi_build_wheels_linux_aarch64_task:
       USE_CUDA=1
       CUDA_DYNAMIC_LOADING=1
       CUDA_HOME=/usr/local/cuda
-    CIBW_BEFORE_BUILD: bash ./tools/wheels/install_openblas.sh "${{ matrix.python-version }}"
+    CIBW_BEFORE_BUILD: bash {project}/tools/wheels/install_openblas.sh "${CIBW_BUILD}"
 
   build_script: |
     apt update
