--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -1,9 +1,9 @@
 name: deploy-pypi
 
 on:
-    # push:
-    #     branches:
-    #         - main
+    push:
+        branches:
+            - main
     release:
         types:
             - published
@@ -16,19 +16,13 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ubuntu-latest, windows-latest, macos-latest]
-                python-version: ['cp39', 'cp310', 'cp311', 'cp312']
-                include:
-                    - os: ubuntu-latest
+                python-version: ['cp39', 'cp310', 'cp311', 'cp312', 'pp38', 'pp39', 'pp310']
+                exclude:
+                    - os: windows-latest
                       python-version: 'pp38'
-                    - os: ubuntu-latest
+                    - os: windows-latest
                       python-version: 'pp39'
-                    - os: ubuntu-latest
-                      python-version: 'pp310'
-                    - os: macos-latest
-                      python-version: 'pp38'
-                    - os: macos-latest
-                      python-version: 'pp39'
-                    - os: macos-latest
+                    - os: windows-latest
                       python-version: 'pp310'
         steps:
             - name: Checkout
@@ -118,7 +112,8 @@ jobs:
                   CIBW_SKIP: "pp37-* cp36-* cp37-* cp38-*"
                   CIBW_BUILD_VERBOSITY: 3
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0"
-                  CIBW_BEFORE_BUILD: brew reinstall gcc; bash ./tools/wheels/install_openblas.sh "${{ matrix.python-version }}"
+                  # The gcc below installs gfortran. gfortran and openblas are only needed for pypy as it compiles scipy from source.
+                  CIBW_BEFORE_BUILD: brew install libomp; brew reinstall gcc; bash ./tools/wheels/install_openblas.sh "${{ matrix.python-version }}"
               with:
                 output-dir: wheelhouse
 
